--- a/kla/index.html
+++ b/kla/index.html
@@ -2,7 +2,7 @@
 
 <HEAD>
     <script src="vexflow-min.js"></script>
-    <script src="kls.js"></script>
+    <script src="kla.js"></script>
     <style>
         #scoreBox {
             display: flex;
@@ -23,16 +23,25 @@
             margin-left: 5px;
         }
 
-        .scale_selector>ul>li{
+        .scale_selector>ul>li {
             margin-right: 20px;
         }
 
-        #answerBar{
+        #currScale {
+            position: relative;
+            top:100px;
+            left:-200px;
+            font-size: 1.2em;
+            font-weight: bold;
+
+        }
+
+        #answerBar {
             width: 100%;
             height: 15px;
         }
-        
     </style>
+    <title>Keyboard Learning Assistant</title>
 </HEAD>
 
 <BODY>
@@ -51,40 +60,77 @@
             </ul>
         </div>
         <div class="selector scale_selector">
-            Scale
+            Major
             <ul>
-                <li><input type="checkbox" name="scales" value="C" checked>C | Am</li>
+                <li><input type="checkbox" name="scales" value="C" checked>C</li>
                 <!--b-->
-                <li><input type="checkbox" name="scales" value="F" checked>F | Dm</li>
+                <li><input type="checkbox" name="scales" value="F" checked>F</li>
                 <!--#-->
-                <li><input type="checkbox" name="scales" value="G">G | Em</li>
+                <li><input type="checkbox" name="scales" value="G">G</li>
                 <!--bb-->
-                <li><input type="checkbox" name="scales" value="Bb">B&flat; | Gm</li>
+                <li><input type="checkbox" name="scales" value="Bb">B&flat;</li>
                 <!--##-->
-                <li><input type="checkbox" name="scales" value="D">D |Bm</li>
+                <li><input type="checkbox" name="scales" value="D">D</li>
 
                 <!--bbb-->
-                <li><input type="checkbox" name="scales" value="Eb">E&flat; | Cm</li>
+                <li><input type="checkbox" name="scales" value="Eb">E&flat;</li>
                 <!--###-->
-                <li><input type="checkbox" name="scales" value="A">A | F&sharp;m</li>
+                <li><input type="checkbox" name="scales" value="A">A</li>
                 <!--bbbb-->
-                <li><input type="checkbox" name="scales" value="Ab">A&flat; | Fm</li>
+                <li><input type="checkbox" name="scales" value="Ab">A&flat;</li>
                 <!--####-->
-                <li><input type="checkbox" name="scales" value="E">E | C&sharp;m</li>
+                <li><input type="checkbox" name="scales" value="E">E</li>
 
                 <!--bbbbb-->
-                <li><input type="checkbox" name="scales" value="Db">D&flat;/C&sharp; | B&flat;m/A&sharp;m</li>
+                <li><input type="checkbox" name="scales" value="Db">D&flat;/C&sharp;</li>
                 <!--#######-->
-                <li><input type="checkbox" name="scales" value="C#">C&sharp;/D&flat; | A&sharp;m/B&flat;m</li>
+                <li><input type="checkbox" name="scales" value="C#">C&sharp;/D&flat;</li>
                 <!--#####-->
-                <li><input type="checkbox" name="scales" value="B">B/C&flat; | G&sharp;m/A&flat;m</li>
+                <li><input type="checkbox" name="scales" value="B">B/C&flat;</li>
                 <!--bbbbbbb-->
-                <li><input type="checkbox" name="scales" value="Cb">C&flat;/B | A&flat;m/G&sharp;m</li>
+                <li><input type="checkbox" name="scales" value="Cb">C&flat;/B</li>
 
                 <!--bbbbbb-->
-                <li><input type="checkbox" name="scales" value="Gb">G&flat;/F&sharp; | E&flat;m/D&sharp;m</li>
+                <li><input type="checkbox" name="scales" value="Gb">G&flat;/F&sharp;</li>
                 <!--######-->
-                <li><input type="checkbox" name="scales" value="F#">F&sharp;/G&flat; | D&sharp;m/E&flat;m/</li>
+                <li><input type="checkbox" name="scales" value="F#">F&sharp;/G&flat;</li>
+            </ul>
+        </div>
+        <div class="selector scale_selector">
+            Minor
+            <ul>
+                <li><input type="checkbox" name="scales" value="Am">Am</li>
+                <!--b-->
+                <li><input type="checkbox" name="scales" value="Dm">Dm</li>
+                <!--#-->
+                <li><input type="checkbox" name="scales" value="Em">Em</li>
+                <!--bb-->
+                <li><input type="checkbox" name="scales" value="Gm">Gm</li>
+                <!--##-->
+                <li><input type="checkbox" name="scales" value="Bm">Bm</li>
+
+                <!--bbb-->
+                <li><input type="checkbox" name="scales" value="Cm">Cm</li>
+                <!--###-->
+                <li><input type="checkbox" name="scales" value="F#m">F&sharp;m</li>
+                <!--bbbb-->
+                <li><input type="checkbox" name="scales" value="Fm">Fm</li>
+                <!--####-->
+                <li><input type="checkbox" name="scales" value="C#m">C&sharp;m</li>
+
+                <!--bbbbb-->
+                <li><input type="checkbox" name="scales" value="Bbm">B&flat;m/A&sharp;m</li>
+                <!--#######-->
+                <li><input type="checkbox" name="scales" value="A#m">A&sharp;m/B&flat;m</li>
+                <!--#####-->
+                <li><input type="checkbox" name="scales" value="G#m">G&sharp;m/A&flat;m</li>
+                <!--bbbbbbb-->
+                <li><input type="checkbox" name="scales" value="Abm">A&flat;m/G&sharp;m</li>
+
+                <!--bbbbbb-->
+                <li><input type="checkbox" name="scales" value="Ebm">E&flat;m/D&sharp;m</li>
+                <!--######-->
+                <li><input type="checkbox" name="scales" value="D#m">D&sharp;m/E&flat;m/</li>
             </ul>
         </div>
         <div class="selector">
@@ -98,7 +144,8 @@
         <div class="selector">
             Settings
             <ul>
-                <li><input type="checkbox" id="switchShowNoteName" onchange="onSwitchChanged(this)">Note Name</li>
+                <li><input type="checkbox" id="switchShowScaleName" onchange="onSwitchChanged(this)" checked>Scale Name</li>
+                <li><input type="checkbox" id="switchShowNoteName" onchange="onSwitchChanged(this)" checked>Note Name</li>
             </ul>
         </div>
     </div>
@@ -108,7 +155,7 @@
     <div id="answerBar"></div>
 </BODY>
 <script>
-    var kls = new KLS();
+    var kls = new KLA();
     var settings = {
         octave: { min: 0, max: 8 },
         scales: [],
@@ -157,6 +204,7 @@
             case "switchFlat": this.settings.signatures.flat = s.checked; break;
             case "switchSharp": this.settings.signatures.sharp = s.checked; break;
             case "switchNatural": this.settings.signatures.natural = s.checked; break;
+            case "switchShowScaleName": this.settings.isShowScaleName = s.checked; break;
             case "switchShowNoteName": this.settings.isShowNoteName = s.checked; break;
         }
         updateSetting();
@@ -191,6 +239,7 @@
         this.settings.signatures.natural = document.getElementById("switchNatural").checked
 
         //settings
+        this.settings.isShowScaleName = document.getElementById("switchShowScaleName").checked
         this.settings.isShowNoteName = document.getElementById("switchShowNoteName").checked
     }
 
@@ -202,9 +251,9 @@
             document.getElementById("stateMsg").innerText = data.stateMsg;
         }
 
-        if(data.answer != null){
-            document.getElementById("answerBar").style.backgroundColor = (data.answer?"green":"red");
-            setTimeout(function(){document.getElementById("answerBar").style.backgroundColor = "";},500)
+        if (data.answer != null) {
+            document.getElementById("answerBar").style.backgroundColor = (data.answer ? "green" : "red");
+            setTimeout(function () { document.getElementById("answerBar").style.backgroundColor = ""; }, 500)
         }
     }
 
