display scale name added

--- a/kla/index.html
+++ b/kla/index.html
@@ -130,7 +130,7 @@
                 <!--bbbbbb-->
                 <li><input type="checkbox" name="scales" value="Ebm">E&flat;m/D&sharp;m</li>
                 <!--######-->
-                <li><input type="checkbox" name="scales" value="D#m">D&sharp;m/E&flat;m/</li>
+                <li><input type="checkbox" name="scales" value="D#m">D&sharp;m/E&flat;m</li>
             </ul>
         </div>
         <div class="selector">
